@@ -1,5 +1,9 @@
 Tuesday, August 19th, 2003   Al Riddoch <alriddoch@zepler.org>
 
+	* Remove obsolete file wfmath.m4.
+
+Tuesday, August 19th, 2003   Al Riddoch <alriddoch@zepler.org>
+
 	* Updated spec.
 
 Sunday, August 17th, 2003   Ron Steinke <rsteinke@w-link.net>
